# cross_market_idio_mr

./: .gitignore  README.md  docs_explanation.md  pyproject.toml  requirements.txt  中文理解说明.md
configs/: universe.yaml
data/processed/: prices.parquet
reports/demo/: backtest_daily.csv  basis_daily.csv  bonus_summary.csv  capacity_analysis.csv  capped_weights.parquet  cost_sensitivity.csv  diagnostics.csv  drawdown_table.csv  dynamic_daily.csv  dynamic_selection.csv  factor_exposure.csv  ml_coefficients.csv  ml_daily.csv  parameter_sensitivity.csv  prices.parquet  raw_weights.parquet  returns.parquet  signals.parquet  strategy_report.md
reports/intraday_demo/: backtest_daily.csv  capped_weights.parquet  diagnostics.csv  drawdown_table.csv  factor_exposure.csv  prices.parquet  raw_weights.parquet  returns.parquet  signals.parquet  strategy_report.md
reports/intraday_real/: backtest_daily.csv  capped_weights.parquet  diagnostics.csv  drawdown_table.csv  factor_exposure.csv  prices.parquet  raw_weights.parquet  returns.parquet  signals.parquet  strategy_report.md
reports/live/: backtest_daily.csv  basis_daily.csv  bonus_summary.csv  capacity_analysis.csv  capped_weights.parquet  cost_sensitivity.csv  diagnostics.csv  drawdown_table.csv  dynamic_daily.csv  dynamic_selection.csv  factor_exposure.csv  ml_coefficients.csv  ml_daily.csv  prices.parquet  (+5 more)
scripts/: download_data.py  make_pdf_report.py  make_report.py  refresh_crypto_daily_cache.py  refresh_live_report.py  run_backtest.py  run_demo.py  run_intraday_demo.py  run_intraday_real.py
tests/: test_smoke.py
(+13 files in other folders)
