[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cross-market-idio-mr"
version = "0.1.0"
description = "Cross-market idiosyncratic mean reversion research baseline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "ccxt",
  "matplotlib",
  "numpy",
  "pandas",
  "pyarrow",
  "pyyaml",
  "scipy",
  "seaborn",
  "statsmodels",
  "tqdm",
  "yfinance",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

